ugly fix for usage in Ubuntu precise

--- a/templates/jenkins-slave.erb
+++ b/templates/jenkins-slave.erb
@@ -8,14 +8,16 @@
 #
 RETVAL=0
 
-. /etc/init.d/functions
+#. /etc/init.d/functions
+. /lib/lsb/init-functions
 
 PID_FILE=/var/run/jenkins-slave.pid
 LOCK_FILE=/var/lock/jenkins-slave
+SU=/bin/su
 
 slave_start() {
   echo Starting Jenkins Slave...
-  runuser - <%= slave_user -%> -c 'java -jar <%= slave_home -%>/<%= client_jar -%> <%= ui_user_flag -%> <%= ui_pass_flag -%> -name <%= fqdn -%> -executors <%= executors -%> <%= masterurl_flag -%> <%= labels_flag -%> &'
+  $SU  -l  <%= slave_user -%> -c 'java -jar <%= slave_home -%>/<%= client_jar -%> <%= ui_user_flag -%> <%= ui_pass_flag -%> -name <%= fqdn -%> -executors <%= executors -%> <%= masterurl_flag -%> <%= labels_flag -%> &'
   pgrep -f -u <%= slave_user -%> <%= client_jar -%> > $PID_FILE
   RETVAL=$?
   [ $RETVAL -eq 0 ] && touch $LOCK_FILE
