--- a/templates/jenkins-slave.erb
+++ b/templates/jenkins-slave.erb
@@ -8,8 +8,14 @@
 #
 RETVAL=0
 
-#. /etc/init.d/functions
-. /lib/lsb/init-functions
+IS_UBUNTU=`cat /etc/*-release | grep -i ubuntu | head -n 1`
+
+
+if [ -n $IS_UBUNTU ]; then
+    . /etc/init.d/functions
+else
+    . /lib/lsb/init-functions
+fi
 
 PID_FILE=/var/run/jenkins-slave.pid
 LOCK_FILE=/var/lock/jenkins-slave
@@ -17,7 +23,12 @@ SU=/bin/su
 
 slave_start() {
   echo Starting Jenkins Slave...
-  $SU  -l  <%= slave_user -%> -c 'java -jar <%= slave_home -%>/<%= client_jar -%> <%= ui_user_flag -%> <%= ui_pass_flag -%> -name <%= fqdn -%> -executors <%= executors -%> <%= masterurl_flag -%> <%= labels_flag -%> &'
+  if [ -n $IS_UBUNTU ]; then
+      runuser - <%= slave_user -%> -c 'java -jar <%= slave_home -%>/<%= client_jar -%> <%= ui_user_flag -%> <%= ui_pass_flag -%> -name <%= fqdn -%> -executors <%= executors -%> <%= masterurl_flag -%> <%= labels_flag -%> &'
+  else
+      $SU  -l  <%= slave_user -%> -c 'java -jar <%= slave_home -%>/<%= client_jar -%> <%= ui_user_flag -%> <%= ui_pass_flag -%> -name <%= fqdn -%> -executors <%= executors -%> <%= masterurl_flag -%> <%= labels_flag -%> &'
+  fi
+
   pgrep -f -u <%= slave_user -%> <%= client_jar -%> > $PID_FILE
   RETVAL=$?
   [ $RETVAL -eq 0 ] && touch $LOCK_FILE
@@ -26,14 +37,14 @@ slave_stop() {
   echo Stopping Jenkins Slave...
   pid=`cat $PID_FILE`
 
-  killproc -p $PID_FILE 
-  
+  killproc -p $PID_FILE
+
   # Wait until the monitor exits
   while (checkpid $pid)
   do
       usleep 100000
   done
-  
+
   RETVAL=$?
   [ $RETVAL -eq 0 ] && rm -f $LOCK_FILE
 }
@@ -42,7 +53,7 @@ slave_restart() {
   echo Restarting Jenkins Slave...
   slave_stop
   slave_start
-  
+
   RETVAL=$?
   [ $RETVAL -eq 0 ] && touch $LOCK_FILE
 }
